Add NMRium header toggle and fullscreen viewer with embedded iframe

--- a/chem_canvas/src/index.css
+++ b/chem_canvas/src/index.css
@@ -364,6 +364,12 @@ canvas:active {
   cursor: crosshair;
 }
 
+.ChemDoodleCanvas {
+  display: block;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 /* Notion-like smooth focus ring */
 input:focus,
 textarea:focus,
